Se agrega fix de overflow

--- a/LexinCorpApp/wwwroot/css/sidenav.css
+++ b/LexinCorpApp/wwwroot/css/sidenav.css
@@ -23,5 +23,5 @@
     transition: .3s transform ease;
 }
 .transiton-div .collapsed .fas {
-    transform: rotate(90deg);
+    transform: rotate(270deg);
 }
